--- a/tmux.conf
+++ b/tmux.conf
@@ -84,5 +84,5 @@ set -g @catppuccin_date_time_text "%Y-%m-%d | %H:%M"
 
 # set -g @plugin 'tmux-plugins/tmux-yank'
 
-run '/opt/homebrew/opt/tpm/share/tpm/tpm'
+run "$(brew --prefix tpm)/share/tpm/tpm"
 
