fix: 斜体表示できない問題を修正する
`default-terminal` を指定しない場合 `$TERM` はscreen-256colorだった。このterminal
typeだと斜体表示ができないため、斜体表示できるtmux-256colorを指定している。

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 # 参考動画: https://youtu.be/DzNmUNvnB04?si=NOjoS8r5VqkpG0do
 # 参考repo: https://github.com/dreamsofcode-io/tmux/blob/main/tmux.conf
 
+set-option -g default-terminal "tmux-256color"
 set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 
