--- a/tmux.conf
+++ b/tmux.conf
@@ -47,43 +47,20 @@ set-option -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-# tpm (tmux plugin manager)
-set-option -g @plugin 'tmux-plugins/tpm'
-set-option -g @plugin 'tmux-plugins/tmux-sensible'
+# Pane Border
+set-option -g pane-border-status top
+set-option -g pane-border-format '#{pane_current_command}'
+set-option -g pane-active-border-style 'fg=default,bold'
+set-option -g pane-border-style 'fg=default,dim'
 
-# Theme
-set-option -g @plugin 'catppuccin/tmux'
-set-option -g @catppuccin_flavour 'mocha'
+# Status Line
+# set-option -g status-style 'bg=default,fg=default,reverse,bold'
+set-option -g status-style 'fg=default,bg=terminal'
+# set-option -g status-left ' #{?client_prefix,#[fg=blue#,bold]↑,.}#[default] [#S] '
+# set-option -g status-left ' #{?client_prefix,/,|} [#S] ➜ '
+# set-option -g status-left ' #{?client_prefix,/,|} [#S] » '
+set-option -g status-left ' #{?client_prefix,/,|} [#S] ∋ '
+set-option -g status-right '#H  %H:%M'
+set-option -g window-status-current-style 'reverse'
 
-set-option -g @catppuccin_window_right_separator "█ "
-set-option -g @catppuccin_window_number_position "right"
-set-option -g @catppuccin_window_middle_separator " | "
-set-option -g @catppuccin_window_default_fill "none"
-set-option -g @catppuccin_window_current_fill "all"
-set-option -g @catppuccin_window_status_enable "yes"
-# set-option -g @catppuccin_window_current_text "#{pane_current_path}"
-
-set-option -g @catppuccin_status_modules_right "application session host date_time"
-set-option -g @catppuccin_status_left_separator ""
-set-option -g @catppuccin_status_right_separator "█"
-set-option -g @catppuccin_status_right_separator_inverse "no"
-set-option -g @catppuccin_status_fill "all"
-set-option -g @catppuccin_status_connect_separator "no"
-
-set-option -g @catppuccin_application_icon "null"
-set-option -g @catppuccin_application_color "#cdd6f4"
-set-option -g @catppuccin_session_icon "null"
-set-option -g @catppuccin_session_color "#{?client_prefix,"#f38ba8","#cdd6f4"}"
-set-option -g @catppuccin_host_icon "null"
-set-option -g @catppuccin_host_color "#cdd6f4"
-set-option -g @catppuccin_date_time_icon "null"
-set-option -g @catppuccin_date_time_color "#cba6f7"
-# set-option -g @catppuccin_date_time_text "%Y-%m-%d | %H:%M:%S"
-set-option -g @catppuccin_date_time_text "%Y-%m-%d | %H:%M"
-# Theme end
-
-
-# set-option -g @plugin 'tmux-plugins/tmux-yank'
-
-run "$(brew --prefix tpm)/share/tpm/tpm"
-
+set-option -g message-style 'fg=default,bg=terminal,reverse'
