--- a/tmux.conf
+++ b/tmux.conf
@@ -50,17 +50,20 @@ set-option -g renumber-windows on
 # Pane Border
 set-option -g pane-border-status top
 set-option -g pane-border-format '#{pane_current_command}'
-set-option -g pane-active-border-style 'fg=default,bold'
+set-option -g pane-active-border-style 'fg=default'
+# set-option -g pane-border-style 'hidden'
 set-option -g pane-border-style 'fg=default,dim'
 
 # Status Line
-# set-option -g status-style 'bg=default,fg=default,reverse,bold'
+set-option -g status-position top
 set-option -g status-style 'fg=default,bg=terminal'
-# set-option -g status-left ' #{?client_prefix,#[fg=blue#,bold]↑,.}#[default] [#S] '
-# set-option -g status-left ' #{?client_prefix,/,|} [#S] ➜ '
-# set-option -g status-left ' #{?client_prefix,/,|} [#S] » '
-set-option -g status-left ' #{?client_prefix,/,|} [#S] ∋ '
-set-option -g status-right '#H  %H:%M'
+set-option -g status-left ' #{?client_prefix,/,|} '
+set-option -g status-right '#S #[dim]in#[default] #H   %H:%M'
+
+set-option -g status-justify centre # window status の位置
+set-option -g automatic-rename-format '#{b:pane_current_path}' # window name
 set-option -g window-status-current-style 'reverse'
+set-option -g window-status-current-format ' #I:#W#[dim]#{?window_flags,#{window_flags}, }#[default] '
+set-option -g window-status-format ' #I:#W#[dim]#{?window_flags,#{window_flags}, }#[default] '
 
 set-option -g message-style 'fg=default,bg=terminal,reverse'
